fixed about page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,23 +9,32 @@
 
   <!-- <div class="hrLine"><span>Or</span></div> -->
   <div>
-    <div class="loginInput">
+    <!-- <div class="loginInput">
       <ion-input type="email" placeholder="Username" text-center [value]="usr" [(ngModel)]="usr"></ion-input>
     </div>
     <div class="loginInput">
       <ion-input type="password" placeholder="Password" text-center [value]="pwd" [(ngModel)]="pwd"></ion-input>
-    </div>
+    </div> -->
+
+    <div class="text" style="color:white;font-size:16px;margin-left:15%;top:50%;"><span>Automobile Life Detection System </span></div>
+    <div class="text" style="color:white;font-size:16px;margin-left:50%;margin-top:5%;"><span>By</span></div>
+    <div class="text" style="color:white;font-size:16px;margin-left:35%;margin-top:5%;"><span>Aaron Stoddard</span></div>
+    <div class="text" style="color:white;font-size:16px;margin-left:32%;margin-top:2%;"><span>Bishistha Shrestha</span></div>
+    <div class="text" style="color:white;font-size:16px;margin-left:40%;margin-top:2%;"><span>Chris Tran</span></div>
+    <div class="text" style="color:white;font-size:16px;margin-left:40%;margin-top:2%;"><span>Troy Wise</span></div>
+   
+  
   </div>
 
-  <div>
+  <!-- <div>
     <div class="item">
       <ion-checkbox class="checkbox" name="isChecked" [(ngModel)]="isChecked"> </ion-checkbox>
       <ion-label class="label">Remember Username</ion-label>
     </div>
-  </div>
+  </div> -->
 
   <button ion-button block round color="secondary" (click)="userLogin();" disabled={{privacyAccepted}} style="font-size:17px; min-height:10%; width:80%; margin-right:auto; margin-left:auto; margin-top:10%; margin-bottom:5% !important;">
-    Login
+    Go back to the app!
   </button>
 
 
