--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
 <ion-tabs #myTabs>>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Connection" tabIcon="bluetooth"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Bluetooth Serial" tabIcon="bluetooth"></ion-tab>
   <!-- <ion-tab [root]="tab5Root" tabTitle="Detail" tabIcon="book"></ion-tab> -->
-  <ion-tab [root]="tab4Root" tabTitle="Test" tabIcon="bluetooth"></ion-tab>
-  <ion-tab tabTitle="Log Out" (ionSelect)="logout();" tabIcon="log-out"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="BLE" tabIcon="bluetooth"></ion-tab>
+  <ion-tab tabTitle="About" (ionSelect)="logout();" tabIcon="information-circle"></ion-tab>
 
 </ion-tabs>
