--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -60,7 +60,7 @@
   </div>
 
   <div>
-    <button ion-button full (click)="scheduleNotification()">Notify</button>
+    <button ion-button full (click)="scheduleNotificationForWarning()">Notify</button>
   </div>
 
 
