fixed some bugs

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -56,7 +56,7 @@
   </div>
 
   <div>
-    <button ion-button full (click)="scheduleNotificationForWarning()">Notify</button>
+    <button ion-button full (click)="scheduleNotification()">Notify</button>
   </div>
 
 
